<resources>
    <string name="app_name">Akinator</string>
    <string name="chmod">Кто угадывает?</string>
    <string name="user">Пользователь</string>
    <string name="computer">Компьютер</string>
    <string name="play_comp">Загадал число от 1 до 1000.\nОтгадай за 10 попыток</string>
    <string name="play_user">Загадай число от 1 до 1000.\nОтгадаю за 10 попыток.\nОтвечай на вопрос!</string>
    <string name="lower">Меньше!</string>
    <string name="bigger">Больше!</string>
    <string name="yes">Да!</string>
    <string name="comp_hint">Буду подсказывать</string>
    <string name="comp_hihint">Вводи сюда</string>
    <string name="try_now">Пробуем!</string>
</resources>
